test/tests/compiler/5_local_variables/valid/assignment_lowest_precedence.plx






pub fn main(none) i32 {
    a: i32;
    a = 0 or 5
    return a
}
