test/tests/compiler/5_local_variables/invalid_parse/plx1_pub_local_var.plx
pub fn main(none) i32 {
    pub a: i32 = 2
    return a
}
